--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 // Infinite loop of alert messages
 function prankLoop() {
     while (true) {
-        alert("This is a harmless prank! Click OK to continue.");
+        alert("waxaan si rasmi ah ujabsaday talefankaaga kk.");
     }
 }
 
