--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 // Infinite loop of alert messages
 function prankLoop() {
     while (true) {
-        alert("waxaan si rasmi ah ujabsaday talefankaaga kk.");
+        alert("Your phone has been hacked.");
     }
 }
 
